--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev:assets": "webpack --watch",
-    "dev:start": "live-server --open=./public/ --host=localhost --watch=./public/",
+    "dev:start": "node serve.js",
     "dev": "npm-run-all -p dev:*",
     "build": "cross-env NODE_ENV=production webpack"
   },
