--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.13.0",
     "npm-run-all": "^4.1.5",
+    "opencv.js": "^1.2.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
     "sass-loader": "^8.0.0",
